--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
 <body>
-
+  <ul class="icon-group">
+    <li class="icon-group-item" >
+     <div class="icon-group-image"><img src="images/placeholder-circle.svg" alt=""></div>
+     <div class="icon-group-body">
 
 
 </body>
