Fixed indentations and added more content

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   <ul class="icon-group">
     <li class="icon-group-item" >
-     <div class="icon-group-image"><img src="images/placeholder-circle.svg" alt=""></div>
-     <div class="icon-group-body">
+     <div class="icon-group-image">
+       <img src="images/placeholder-circle.svg" alt="">
+     </div>
+     <div class="icon-group-body"></div>
 
-
+</ul>
 </body>
 </html>
